# universal-multi-agent-engine

./: .env.example  .gitignore  LICENSE  README-EN.md  README-UI.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_deprecated_pages/: 10_Scenario_Editor.py  11_Conversation.py  12_Notifications.py  3_World_Map.py  4_Dialogue.py  5_Economy.py  6_Memory.py  8_Network.py  9_Replay.py
agents/: statistical_crowd.py  template_agent.py
assets/: README.md  style.css
config/: model_config.py
configs/: market.yaml  minimal.yaml  policy.yaml  showcase_v2.yaml  supply_chain.yaml
core/: agent_factory.py  archetype_diffusion.py  async_gateway.py  context_cache.py  demo_data.py  memory_manager.py  model_router.py  semantic_cache.py  ui_utils.py  world_engine.py
docs/: cost-engineering.md  mvp-roadmap.md
examples/: README.md  market_simulation.py  minimal_simulation.py  policy_shock_simulation.py
pages/: 1_Agent_Roster.py  2_Cost_Analytics.py  3_Replay_Analysis.py
scenarios/climate/: world.yaml
scenarios/custom/: npcs.yaml  world.yaml
scenarios/election/: world.yaml
scenarios/medieval_town/: npcs.yaml  world.yaml
scenarios/pandemic/: world.yaml
scenarios/stock_market/: world.yaml
scenarios/supply_chain/: world.yaml
src/universal_multi_agent_sim/: __init__.py  cache.py  engine.py  logging_utils.py  memory.py  router.py  scheduler.py  types.py  world.py
src/universal_multi_agent_sim/adapters/: __init__.py  base.py  (+1 more)
tests/: test_memory.py  test_minimal_simulation.py  test_router.py  test_scheduler.py
(+6 files in other folders)
